@@ -10,7 +10,7 @@
      HTTPD_PASSWD_FILE_FMT = "/var/lib/ipa/passwds/{host}-443-RSA"
 --- a/ipaplatform/debian/paths.py
 +++ b/ipaplatform/debian/paths.py
-@@ -26,6 +26,8 @@ class DebianPathNamespace(BasePathNamesp
+@@ -28,6 +28,8 @@ class DebianPathNamespace(BasePathNamesp
      HTTPD_IPA_REWRITE_CONF = "/etc/apache2/conf-available/ipa-rewrite.conf"
      HTTPD_IPA_CONF = "/etc/apache2/conf-enabled/ipa.conf"
      HTTPD_NSS_CONF = "/etc/apache2/mods-available/nss.conf"
@@ -30,7 +30,7 @@
  
  logger = logging.getLogger(__name__)
  
-@@ -208,6 +208,7 @@ class HTTPInstance(service.Service):
+@@ -214,6 +214,7 @@ class HTTPInstance(service.Service):
  
      def backup_ssl_conf(self):
          self.fstore.backup_file(paths.HTTPD_SSL_CONF)
@@ -38,7 +38,7 @@
  
      def disable_nss_conf(self):
          """
-@@ -229,12 +230,13 @@ class HTTPInstance(service.Service):
+@@ -235,12 +236,13 @@ class HTTPInstance(service.Service):
                                     '+TLSv1 +TLSv1.1 +TLSv1.2', False)
  
      def set_mod_ssl_logdir(self):
@@ -58,7 +58,7 @@
  
      def disable_mod_ssl_ocsp(self):
          if sysupgrade.get_upgrade_state('http', OCSP_ENABLED) is None:
-@@ -266,14 +268,14 @@ class HTTPInstance(service.Service):
+@@ -272,14 +274,14 @@ class HTTPInstance(service.Service):
  
      def __add_include(self):
          """This should run after __set_mod_nss_port so is already backed up"""
@@ -75,7 +75,7 @@
  
      def configure_certmonger_renewal_guard(self):
          certmonger = services.knownservices.certmonger
-@@ -398,10 +400,10 @@ class HTTPInstance(service.Service):
+@@ -404,10 +406,10 @@ class HTTPInstance(service.Service):
  
      def configure_mod_ssl_certs(self):
          """Configure the mod_ssl certificate directives"""
@@ -88,7 +88,7 @@
                                     'SSLCertificateKeyFile',
                                     paths.HTTPD_KEY_FILE, False)
          installutils.set_directive(
-@@ -409,7 +411,7 @@ class HTTPInstance(service.Service):
+@@ -415,7 +417,7 @@ class HTTPInstance(service.Service):
              'SSLPassPhraseDialog',
              'exec:{passread}'.format(passread=paths.IPA_HTTPD_PASSWD_READER),
              False)
@@ -96,8 +96,8 @@
 +        installutils.set_directive(paths.HTTPD_SSL_SITE_CONF,
                                     'SSLCACertificateFile',
                                     paths.IPA_CA_CRT, False)
- 
-@@ -501,7 +503,7 @@ class HTTPInstance(service.Service):
+         # set SSLVerifyDepth for external CA installations
+@@ -512,7 +514,7 @@ class HTTPInstance(service.Service):
                               'external-helper', helper)
  
          for f in [paths.HTTPD_IPA_CONF, paths.HTTPD_SSL_CONF,
@@ -108,7 +108,7 @@
              except ValueError as error:
 --- a/ipaserver/install/ipa_backup.py
 +++ b/ipaserver/install/ipa_backup.py
-@@ -152,6 +152,7 @@ class Backup(admintool.AdminTool):
+@@ -153,6 +153,7 @@ class Backup(admintool.AdminTool):
          paths.HTTPD_IPA_PKI_PROXY_CONF,
          paths.HTTPD_IPA_REWRITE_CONF,
          paths.HTTPD_SSL_CONF,
