@@ -1,6 +1,6 @@
 --- a/ipaplatform/debian/constants.py
 +++ b/ipaplatform/debian/constants.py
-@@ -12,6 +12,7 @@ from ipaplatform.base.constants import B
+@@ -14,6 +14,7 @@ from ipaplatform.base.constants import B
  
  class DebianConstantsNamespace(BaseConstantsNamespace):
      HTTPD_USER = "www-data"
