@@ -1,6 +1,6 @@
 --- a/ipaplatform/debian/paths.py
 +++ b/ipaplatform/debian/paths.py
-@@ -37,6 +37,7 @@ class DebianPathNamespace(BasePathNamesp
+@@ -39,6 +39,7 @@ class DebianPathNamespace(BasePathNamesp
      NAMED_ROOT_KEY = "/etc/bind/bind.keys"
      NAMED_BINDKEYS_FILE = "/etc/bind/bind.keys"
      NAMED_MANAGED_KEYS_DIR = "/var/cache/bind/dynamic"
@@ -8,7 +8,7 @@
      OPENLDAP_LDAP_CONF = "/etc/ldap/ldap.conf"
      ETC_DEBIAN_VERSION = "/etc/debian_version"
      IPA_P11_KIT = "/usr/local/share/ca-certificates/ipa-ca.crt"
-@@ -60,6 +61,7 @@ class DebianPathNamespace(BasePathNamesp
+@@ -62,6 +63,7 @@ class DebianPathNamespace(BasePathNamesp
      DNSSEC_TRUSTED_KEY = "/etc/bind/trusted-key.key"
      GSSAPI_SESSION_KEY = "/etc/apache2/ipasession.key"
      OLD_KRA_AGENT_PEM = "/etc/apache2/nssdb/kra-agent.pem"
@@ -16,7 +16,7 @@
      SBIN_SERVICE = "/usr/sbin/service"
      CERTMONGER_COMMAND_TEMPLATE = "/usr/lib/ipa/certmonger/%s"
      UPDATE_CA_TRUST = "/usr/sbin/update-ca-certificates"
-@@ -78,6 +80,7 @@ class DebianPathNamespace(BasePathNamesp
+@@ -80,6 +82,7 @@ class DebianPathNamespace(BasePathNamesp
      IPA_DNSKEYSYNCD = "/usr/lib/ipa/ipa-dnskeysyncd"
      IPA_HTTPD_KDCPROXY = "/usr/lib/ipa/ipa-httpd-kdcproxy"
      IPA_ODS_EXPORTER = "/usr/lib/ipa/ipa-ods-exporter"
